--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
 <body>
   <div class="container">
     <h2>Login</h2>
-    <form action="shirt.html" method="post">
+    <form action="shirt.html" method="GET">
       <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
