--- a/login1.html
+++ b/login1.html
@@ -63,7 +63,7 @@
 <body>
   <div class="container">
     <h2>Login</h2>
-    <form action="Untitled-1.html" method="post">
+    <form action="Untitled-1.html" method="GET">
       <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
