--- a/helmet.html
+++ b/helmet.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="confirm-link">
-      <a href="update 2.html">Confirm</a>
+      <a href="index.html">Confirm</a>
     </div>
   </div>
 
